gen/zlua/LuaParser.py
# Generated from C:/Users/91018/Documents/GitHub/zlua_prototype\Lua.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class LuaParser ( Parser ):

    grammarFileName = "Lua.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'return'", "';'", "'='", "'break'", "'do'", 
                     "'end'", "'while'", "'if'", "'then'", "'for'", "','", 
                     "'in'", "'function'", "'local'", "'elseif'", "'else'", 
                     "'.'", "':'", "'^'", "'('", "')'", "'['", "']'", "'{'", 
                     "'}'", "'nil'", "'false'", "'true'", "'not'", "'#'", 
                     "'-'", "'*'", "'/'", "'%'", "'+'", "'..'", "'<'", "'>'", 
                     "'<='", "'>='", "'~='", "'=='", "'and'", "'or'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "NilKW", "FalseKW", "TrueKW", 
                      "NotKW", "LenKW", "MinusKW", "MulKW", "DivKW", "ModKW", 
                      "AddKW", "ConcatKW", "LtKW", "MtKW", "LeKW", "MeKW", 
                      "NeKW", "EqKW", "AndKW", "OrKW", "NAME", "NORMALSTRING", 
                      "CHARSTRING", "LONGSTRING", "INT", "HEX", "FLOAT", 
                      "COMMENT", "LINE_COMMENT", "WS", "SHEBANG" ]

    RULE_chunk = 0
    RULE_block = 1
    RULE_retstat = 2
    RULE_stat = 3
    RULE_elseifBlock = 4
    RULE_elseBlock = 5
    RULE_funcname = 6
    RULE_tableOrFunc = 7
    RULE_methodname = 8
    RULE_varlist = 9
    RULE_namelist = 10
    RULE_explist = 11
    RULE_doc = 12
    RULE_exp = 13
    RULE_prefixexp = 14
    RULE_functioncall = 15
    RULE_varOrExp = 16
    RULE_lvalue = 17
    RULE_setter = 18
    RULE_getter = 19
    RULE_var = 20
    RULE_varSuffix = 21
    RULE_nameAndArgs = 22
    RULE_args = 23
    RULE_functiondef = 24
    RULE_funcbody = 25
    RULE_parlist = 26
    RULE_tableconstructor = 27
    RULE_fieldlist = 28
    RULE_field = 29
    RULE_fieldsep = 30
    RULE_number = 31
    RULE_string = 32

    ruleNames =  [ "chunk", "block", "retstat", "stat", "elseifBlock", "elseBlock", 
                   "funcname", "tableOrFunc", "methodname", "varlist", "namelist", 
                   "explist", "doc", "exp", "prefixexp", "functioncall", 
                   "varOrExp", "lvalue", "setter", "getter", "var", "varSuffix", 
                   "nameAndArgs", "args", "functiondef", "funcbody", "parlist", 
                   "tableconstructor", "fieldlist", "field", "fieldsep", 
                   "number", "string" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    NilKW=26
    FalseKW=27
    TrueKW=28
    NotKW=29
    LenKW=30
    MinusKW=31
    MulKW=32
    DivKW=33
    ModKW=34
    AddKW=35
    ConcatKW=36
    LtKW=37
    MtKW=38
    LeKW=39
    MeKW=40
    NeKW=41
    EqKW=42
    AndKW=43
    OrKW=44
    NAME=45
    NORMALSTRING=46
    CHARSTRING=47
    LONGSTRING=48
    INT=49
    HEX=50
    FLOAT=51
    COMMENT=52
    LINE_COMMENT=53
    WS=54
    SHEBANG=55

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ChunkContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def EOF(self):
            return self.getToken(LuaParser.EOF, 0)

        def getRuleIndex(self):
            return LuaParser.RULE_chunk

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChunk" ):
                return visitor.visitChunk(self)
            else:
                return visitor.visitChildren(self)




    def chunk(self):

        localctx = LuaParser.ChunkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_chunk)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.block()
            self.state = 67
            self.match(LuaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.StatContext)
            else:
                return self.getTypedRuleContext(LuaParser.StatContext,i)


        def retstat(self):
            return self.getTypedRuleContext(LuaParser.RetstatContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = LuaParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LuaParser.T__1) | (1 << LuaParser.T__3) | (1 << LuaParser.T__4) | (1 << LuaParser.T__6) | (1 << LuaParser.T__7) | (1 << LuaParser.T__9) | (1 << LuaParser.T__12) | (1 << LuaParser.T__13) | (1 << LuaParser.T__19) | (1 << LuaParser.NAME))) != 0):
                self.state = 69
                self.stat()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LuaParser.T__0:
                self.state = 75
                self.retstat()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RetstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def explist(self):
            return self.getTypedRuleContext(LuaParser.ExplistContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_retstat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRetstat" ):
                return visitor.visitRetstat(self)
            else:
                return visitor.visitChildren(self)




    def retstat(self):

        localctx = LuaParser.RetstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_retstat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(LuaParser.T__0)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LuaParser.T__12) | (1 << LuaParser.T__19) | (1 << LuaParser.T__23) | (1 << LuaParser.NilKW) | (1 << LuaParser.FalseKW) | (1 << LuaParser.TrueKW) | (1 << LuaParser.NotKW) | (1 << LuaParser.LenKW) | (1 << LuaParser.MinusKW) | (1 << LuaParser.NAME) | (1 << LuaParser.NORMALSTRING) | (1 << LuaParser.CHARSTRING) | (1 << LuaParser.LONGSTRING) | (1 << LuaParser.INT) | (1 << LuaParser.HEX) | (1 << LuaParser.FLOAT))) != 0):
                self.state = 79
                self.explist()


            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LuaParser.T__1:
                self.state = 82
                self.match(LuaParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LuaParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DoendStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoendStat" ):
                return visitor.visitDoendStat(self)
            else:
                return visitor.visitChildren(self)


    class FunctioncallStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functioncall(self):
            return self.getTypedRuleContext(LuaParser.FunctioncallContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctioncallStat" ):
                return visitor.visitFunctioncallStat(self)
            else:
                return visitor.visitChildren(self)


    class IfelseStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self):
            return self.getTypedRuleContext(LuaParser.ExpContext,0)

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)

        def elseifBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.ElseifBlockContext)
            else:
                return self.getTypedRuleContext(LuaParser.ElseifBlockContext,i)

        def elseBlock(self):
            return self.getTypedRuleContext(LuaParser.ElseBlockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfelseStat" ):
                return visitor.visitIfelseStat(self)
            else:
                return visitor.visitChildren(self)


    class ForijkStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)
        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.ExpContext)
            else:
                return self.getTypedRuleContext(LuaParser.ExpContext,i)

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForijkStat" ):
                return visitor.visitForijkStat(self)
            else:
                return visitor.visitChildren(self)


    class FunctiondefStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funcname(self):
            return self.getTypedRuleContext(LuaParser.FuncnameContext,0)

        def funcbody(self):
            return self.getTypedRuleContext(LuaParser.FuncbodyContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctiondefStat" ):
                return visitor.visitFunctiondefStat(self)
            else:
                return visitor.visitChildren(self)


    class LocalfunctiondefStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)
        def funcbody(self):
            return self.getTypedRuleContext(LuaParser.FuncbodyContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocalfunctiondefStat" ):
                return visitor.visitLocalfunctiondefStat(self)
            else:
                return visitor.visitChildren(self)


    class AssignStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def lvalue(self):
            return self.getTypedRuleContext(LuaParser.LvalueContext,0)

        def exp(self):
            return self.getTypedRuleContext(LuaParser.ExpContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStat" ):
                return visitor.visitAssignStat(self)
            else:
                return visitor.visitChildren(self)


    class BreakStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakStat" ):
                return visitor.visitBreakStat(self)
            else:
                return visitor.visitChildren(self)


    class EmptyStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmptyStat" ):
                return visitor.visitEmptyStat(self)
            else:
                return visitor.visitChildren(self)


    class ForinStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def namelist(self):
            return self.getTypedRuleContext(LuaParser.NamelistContext,0)

        def explist(self):
            return self.getTypedRuleContext(LuaParser.ExplistContext,0)

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForinStat" ):
                return visitor.visitForinStat(self)
            else:
                return visitor.visitChildren(self)


    class LocalDeclarationStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def namelist(self):
            return self.getTypedRuleContext(LuaParser.NamelistContext,0)

        def explist(self):
            return self.getTypedRuleContext(LuaParser.ExplistContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocalDeclarationStat" ):
                return visitor.visitLocalDeclarationStat(self)
            else:
                return visitor.visitChildren(self)


    class WhileStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self):
            return self.getTypedRuleContext(LuaParser.ExpContext,0)

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStat" ):
                return visitor.visitWhileStat(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = LuaParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = LuaParser.EmptyStatContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.match(LuaParser.T__1)
                pass

            elif la_ == 2:
                localctx = LuaParser.AssignStatContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.lvalue()
                self.state = 87
                self.match(LuaParser.T__2)
                self.state = 88
                self.exp(0)
                pass

            elif la_ == 3:
                localctx = LuaParser.FunctioncallStatContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 90
                self.functioncall()
                pass

            elif la_ == 4:
                localctx = LuaParser.BreakStatContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 91
                self.match(LuaParser.T__3)
                pass

            elif la_ == 5:
                localctx = LuaParser.DoendStatContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 92
                self.match(LuaParser.T__4)
                self.state = 93
                self.block()
                self.state = 94
                self.match(LuaParser.T__5)
                pass

            elif la_ == 6:
                localctx = LuaParser.WhileStatContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 96
                self.match(LuaParser.T__6)
                self.state = 97
                self.exp(0)
                self.state = 98
                self.match(LuaParser.T__4)
                self.state = 99
                self.block()
                self.state = 100
                self.match(LuaParser.T__5)
                pass

            elif la_ == 7:
                localctx = LuaParser.IfelseStatContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 102
                self.match(LuaParser.T__7)
                self.state = 103
                self.exp(0)
                self.state = 104
                self.match(LuaParser.T__8)
                self.state = 105
                self.block()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==LuaParser.T__14:
                    self.state = 106
                    self.elseifBlock()
                    self.state = 111
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==LuaParser.T__15:
                    self.state = 112
                    self.elseBlock()


                self.state = 115
                self.match(LuaParser.T__5)
                pass

            elif la_ == 8:
                localctx = LuaParser.ForijkStatContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 117
                self.match(LuaParser.T__9)
                self.state = 118
                self.match(LuaParser.NAME)
                self.state = 119
                self.match(LuaParser.T__2)
                self.state = 120
                self.exp(0)
                self.state = 121
                self.match(LuaParser.T__10)
                self.state = 122
                self.exp(0)
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==LuaParser.T__10:
                    self.state = 123
                    self.match(LuaParser.T__10)
                    self.state = 124
                    self.exp(0)


                self.state = 127
                self.match(LuaParser.T__4)
                self.state = 128
                self.block()
                self.state = 129
                self.match(LuaParser.T__5)
                pass

            elif la_ == 9:
                localctx = LuaParser.ForinStatContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 131
                self.match(LuaParser.T__9)
                self.state = 132
                self.namelist()
                self.state = 133
                self.match(LuaParser.T__11)
                self.state = 134
                self.explist()
                self.state = 135
                self.match(LuaParser.T__4)
                self.state = 136
                self.block()
                self.state = 137
                self.match(LuaParser.T__5)
                pass

            elif la_ == 10:
                localctx = LuaParser.FunctiondefStatContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 139
                self.match(LuaParser.T__12)
                self.state = 140
                self.funcname()
                self.state = 141
                self.funcbody()
                pass

            elif la_ == 11:
                localctx = LuaParser.LocalfunctiondefStatContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 143
                self.match(LuaParser.T__13)
                self.state = 144
                self.match(LuaParser.T__12)
                self.state = 145
                self.match(LuaParser.NAME)
                self.state = 146
                self.funcbody()
                pass

            elif la_ == 12:
                localctx = LuaParser.LocalDeclarationStatContext(self, localctx)
                self.enterOuterAlt(localctx, 12)
                self.state = 147
                self.match(LuaParser.T__13)
                self.state = 148
                self.namelist()
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==LuaParser.T__2:
                    self.state = 149
                    self.match(LuaParser.T__2)
                    self.state = 150
                    self.explist()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ElseifBlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(LuaParser.ExpContext,0)


        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_elseifBlock

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseifBlock" ):
                return visitor.visitElseifBlock(self)
            else:
                return visitor.visitChildren(self)




    def elseifBlock(self):

        localctx = LuaParser.ElseifBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_elseifBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(LuaParser.T__14)
            self.state = 156
            self.exp(0)
            self.state = 157
            self.match(LuaParser.T__8)
            self.state = 158
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ElseBlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_elseBlock

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseBlock" ):
                return visitor.visitElseBlock(self)
            else:
                return visitor.visitChildren(self)




    def elseBlock(self):

        localctx = LuaParser.ElseBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_elseBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(LuaParser.T__15)
            self.state = 161
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncnameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)

        def tableOrFunc(self):
            return self.getTypedRuleContext(LuaParser.TableOrFuncContext,0)


        def methodname(self):
            return self.getTypedRuleContext(LuaParser.MethodnameContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_funcname

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncname" ):
                return visitor.visitFuncname(self)
            else:
                return visitor.visitChildren(self)




    def funcname(self):

        localctx = LuaParser.FuncnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcname)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(LuaParser.NAME)
            self.state = 164
            self.tableOrFunc()
            self.state = 165
            self.methodname()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TableOrFuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(LuaParser.NAME)
            else:
                return self.getToken(LuaParser.NAME, i)

        def getRuleIndex(self):
            return LuaParser.RULE_tableOrFunc

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTableOrFunc" ):
                return visitor.visitTableOrFunc(self)
            else:
                return visitor.visitChildren(self)




    def tableOrFunc(self):

        localctx = LuaParser.TableOrFuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_tableOrFunc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LuaParser.T__16:
                self.state = 167
                self.match(LuaParser.T__16)
                self.state = 168
                self.match(LuaParser.NAME)
                self.state = 173
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
